--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico" href="/LogoTab.ico"/>
+    <meta name="description" content="Short Cirkuit: venta de notebooks, monitores, PCs e impresoras, con stock actualizado y atencion personalizada. Tambien ofrecemos servicios tecnicos de reparacion, mantenimiento, upgrades, limpieza y optimizacion de equipos." />
+    <meta name="keywords" content="notebooks, monitores, PC, impresoras, servicio tecnico, reparacion de PC, mantenimiento de notebooks, upgrade de hardware, limpieza de computadoras" />
+    <link rel="icon" type="image/svg+xml" href="/logo/favicon-bolt.svg" />
+    <link rel="alternate icon" type="image/x-icon" href="/logo/LogoTab.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Cirkuit</title>
   </head>
