--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,28 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="Short Cirkuit: venta de notebooks, monitores, PCs e impresoras, con stock actualizado y atencion personalizada. Tambien ofrecemos servicios tecnicos de reparacion, mantenimiento, upgrades, limpieza y optimizacion de equipos." />
+    <meta name="description" content="Short Cirkuit: notebooks, monitores, PCs e impresoras con stock actualizado y servicio técnico de reparación, mantenimiento y upgrades." />
     <meta name="keywords" content="notebooks, monitores, PC, impresoras, servicio tecnico, reparacion de PC, mantenimiento de notebooks, upgrade de hardware, limpieza de computadoras" />
+    <link rel="canonical" href="https://shortcirkuit.com/" />
+
+    <meta property="og:locale" content="es_AR" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Short Cirkuit | Tecnología y Servicio Técnico" />
+    <meta property="og:description" content="Notebooks, monitores, PCs e impresoras con stock actualizado y atención personalizada." />
+    <meta property="og:url" content="https://shortcirkuit.com/" />
+    <meta property="og:image" content="https://shortcirkuit.com/logo/og-image.png" />
+    <meta property="og:image:alt" content="Short Cirkuit - Tecnología y servicio técnico" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Short Cirkuit | Tecnología y Servicio Técnico" />
+    <meta name="twitter:description" content="Notebooks, monitores, PCs e impresoras con stock actualizado y atención personalizada." />
+    <meta name="twitter:image" content="https://shortcirkuit.com/logo/og-image.png" />
+
     <link rel="icon" type="image/svg+xml" href="/logo/favicon-bolt.svg" />
     <link rel="alternate icon" type="image/x-icon" href="/logo/LogoTab.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Short Cirkuit</title>
+    <title>Short Cirkuit | Tecnología y Servicio Técnico</title>
   </head>
   <body>
     <div id="root"></div>
