Migracion Full Vercel

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
     <link rel="icon" type="image/svg+xml" href="/logo/favicon-bolt.svg" />
     <link rel="alternate icon" type="image/x-icon" href="/logo/LogoTab.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Short Cirkuit | Tecnología y Servicio Técnico</title>
+    <title>Short Cirkuit</title>
   </head>
   <body>
     <div id="root"></div>
